# cpp-sp

./: .autotools  .cdtproject  .cproject  .gitignore  .project  Makefile.am  Makefile.gcc  Makefile.sun  Portfile  Portfile.in  Shibboleth.dsw  Shibboleth.sln  acx_pthread.m4  acx_rpctest.m4  bootstrap  config_win32.h  configure.ac  depend  doxygen.am  ltmain.sh  pkginfo.in  postinstall  shibboleth.spec.in  shibsp-lite.pc.in  shibsp.pc.in
adfs/: .gitignore  Makefile.am  XML.cpp  adfs-lite.vcproj  adfs-lite.vcxproj  adfs.cpp  adfs.dsp  adfs.rc  adfs.vcproj  adfs.vcxproj  handlers.cpp  internal.h  listener.cpp  resource.h
apache/: .gitignore  Makefile.am  mod_apache.cpp  mod_shib.cpp  mod_shib13.dsp  mod_shib13.vcproj  mod_shib13.vcxproj  mod_shib20.dsp  mod_shib20.vcproj  mod_shib20.vcxproj  mod_shib22.dsp  mod_shib22.vcproj  mod_shib22.vcxproj  mod_shib24.vcxproj  mod_shib4.cpp  mod_shib4.rc  mod_shib_13.cpp  mod_shib_13.rc  mod_shib_20.cpp  mod_shib_20.rc  mod_shib_22.cpp  mod_shib_22.rc  mod_shib_24.cpp  mod_shib_24.rc  resource.h
apache-2.0/: .gitignore  Makefile.am  apache2.dsp  cgiparse.cpp  cgiparse.h  mod_shib.cpp
configs/: .gitignore  AAP.xml  AAP.xml.in  IQ-metadata.xml.in  IQ-sites.xml  IQ-sites.xml.in  IQ-trust.xml  IQ-trust.xml.in  Makefile.am  SetService32.bat  SetService64.bat  accessError.html  agent.ini  apache.config  apache.config.in  apache2.config  apache2.config.in  apache22.config.in  apache24.config.in  attrChecker.html  attribute-map.xml  attribute-map.xml.in  attribute-policy.xml  attribute-policy.xml.in  attributes.ini  bindingTemplate.html  ca-bundle.crt  console.logger  creds.xml  creds.xml.in  example-metadata.xml  example-metadata.xml.in  example-shibboleth2.xml  example-shibboleth3.xml  example-sites.xml.in  globalLogout.html  handlers.ini  httpd.logger.in  iis-config.ini  inqueue.crt  (+51 more)
doc/: CREDITS.txt  DEPLOY-GUIDE-ORIGIN.html  DEPLOY-GUIDE-TARGET.html  INSTALL-WIN32.txt  INSTALL.txt  InQueue.html  LICENSE.txt  Makefile.am  NEWS.txt  NOTICE.txt  README.txt  RELEASE.txt  UPGRADE-GUIDE.html  main.css  mysql-4.0.12.diff
eduPerson/: AAP.cpp  AffiliationAttribute.cpp  Constants.cpp  EPPNAttribute.cpp  EntitlementAttribute.cpp  Makefile.am  PrimaryAffiliationAttribute.cpp  ScopedAttribute.cpp  SimpleAttribute.cpp  eduPerson.cpp  eduPerson.dsp  eduPerson.h  internal.h
fastcgi/: .gitignore  Makefile.am  shibauthorizer.cpp  shibauthorizer.dsp  shibauthorizer.rc  shibauthorizer.vcproj  shibauthorizer.vcxproj  shibresponder.cpp  shibresponder.dsp  shibresponder.rc  shibresponder.vcproj  shibresponder.vcxproj
memcache-store/: .gitignore  Makefile.am  memcache-store.cpp  memcache-store.rc  memcache-store.vcproj  memcache-store.vcxproj  resource.h
mod_shibrm/: Makefile.am  Makefile.gcc  mod_shibrm.cpp  mod_shibrm.dsp
mod_shire/: .gitignore  Makefile.am  Makefile.gcc  mod_shire.cpp  mod_shire.dsp
nsapi_shib/: .gitignore  Makefile.am  nsapi_shib.cpp  nsapi_shib.dsp  nsapi_shib.rc  nsapi_shib.vcproj  nsapi_shib.vcxproj  resource.h
odbc-store/: .gitignore  Makefile.am  odbc-store.cpp  odbc-store.rc  odbc-store.vcproj  odbc-store.vcxproj  resource.h
odbc_ccache/: .gitignore  Makefile.am  odbc-ccache.cpp  odbc_ccache.rc  odbc_ccache.vcproj  resource.h
oncrpc/: .gitignore  Makefile.am  auth_non.c  auth_uni.c  authunix.c  bindresv.c  clnt_per.c  clnt_tcp.c  clnt_udp.c  get_myad.c  getrpcen.c  nt.c  oncrpc.def  oncrpc.dsp  oncrpc.rc  oncrpc.vcproj  oncrpcbc.def  pmap_cln.c  pmap_get.c  pmap_gma.c  pmap_pr.c  pmap_pro.c  pmap_rmt.c  portmap.c  resource.h  rpc_comm.c  svc.c  svc_run.c  svc_tcp.c  svc_udp.c  xdr.c  xdr_arra.c  xdr_floa.c  xdr_mem.c  xdr_rec.c  xdr_refe.c
plugins/: .gitignore  AttributeResolverHandler.cpp  CaseFoldingAttributeResolver.cpp  GSSAPIAttributeExtractor.cpp  Makefile.am  TemplateAttributeResolver.cpp  TimeAccessControl.cpp  TransformAttributeResolver.cpp  internal.h  plugins-lite.vcxproj  plugins.cpp  plugins.rc  plugins.vcxproj  plugins.vcxproj.filters  resource.h
schemas/: .gitignore  Makefile.am  catalog.xml.in  credentials.xsd  cs-sstc-schema-assertion-1.1.xsd  cs-sstc-schema-protocol-1.1.xsd  eduPerson.xsd  metadata_v12_to_v11.xsl  metadata_v12_to_v13.xsl  metadata_v13_to_v12.xsl  shibboleth-2.0-afp-mf-basic.xsd  shibboleth-2.0-afp-mf-saml.xsd  shibboleth-2.0-afp.xsd  shibboleth-2.0-attribute-map.xsd  shibboleth-2.0-attribute-resolver.xsd  shibboleth-2.0-native-sp-config.xsd  shibboleth-2.0-native-sp-protocols.xsd  shibboleth-2.0-simple-resolver.xsd  shibboleth-2.0-sp-notify.xsd  shibboleth-3.0-native-sp-config.xsd  shibboleth-appmap-1.0.xsd  shibboleth-metadata-1.0.xsd  shibboleth-spconfig-2.0.xsd  shibboleth-targetconfig-1.0.xsd  shibboleth-trust-1.0.xsd  shibboleth.xsd  soap-envelope.xsd  trust_v12_to_v11.xsl  trust_v13_to_v12.xsl  wayfconfig.xsd  xmldsig-core-schema.xsd  xmldsig-filter2.xsd
selinux/: .gitignore  Makefile.am  shibshar.fc.in  shibshar.te
shar/: .gitignore  Makefile.am  resource.h  shar-utils.cpp  shar-utils.h  shar.c  shar.cpp  shar.dsp  shar.rc  shar.vcproj  shar_win32.cpp  shibrpc-server.cpp  test-client.c  test-client.cpp  testclient.dsp  testclient.vcproj
shib/: .gitignore  AAP.cpp  BasicTrust.cpp  ClubShibPOSTProfile.cpp  Constants.cpp  CredResolvers.cpp  Makefile.am  Metadata.cpp  ShibConfig.cpp  (+28 more)
shib-mysql-ccache/: .gitignore  Makefile.am  resource.h  shib-mysql-ccache.cpp  shib_mysql_ccache.dsp  shib_mysql_ccache.rc  shib_mysql_ccache.vcproj
shib-target/: .gitignore  ArtifactMapper.cpp  CommonDomainCookie.cpp  IListener.cpp  Makefile  Makefile.am  MemoryListener.cpp  RPCListener.cpp  RPCListener.h  ShibHTTPHook.cpp  SocketListener.cpp  SocketListener.h  TCPListener.cpp  UnixListener.cpp  XML.cpp  XMLApplicationMapper.cpp  XMLRequestMapper.cpp  ccache-utils.h  ddf.cpp  ddf.h  ddfml.cpp  hresult.h  internal.h  resource.h  shib-ccache.cpp  shib-config.cpp  shib-handlers.cpp  shib-ini.cpp  shib-mlp.cpp  shib-paths.h.in  shib-resource.cpp  shib-resourceentry.cpp  shib-rm.cpp  shib-rpcerror.cpp  shib-rpchandle.cpp  shib-rpcutil.c  shib-shire.cpp  shib-sock.c  shib-sock.cpp  shib-target.cpp  (+19 more)
(+844 files in other folders)
